# gnoi

./: .gitignore  .travis.yml  BUILD  BUILD.bazel  CONTRIBUTING.md  CONTRIBUTORS  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  bazel-bin  bazel-gnoi  bazel-out  bazel-testlogs  common.bzl  common.proto  compile_protos.sh  gnoi_deps.bzl  gnoi_go_deps.bzl  gnoi_infra_deps.bzl  go.mod  go.sum  regenerate-files.sh  types.pb.go  types.proto
.bcr/: metadata.template.json
.github/: .protolint.yml  dependabot.yml  protolint.yaml
.github/workflows/: ci-build-gnoi.yml  ci-cpp-build-gnoi.yml  go.yml  linter.yml
auth/: authn-authz-intro.md  authzn.proto
bazel/: tools.go
bgp/: BUILD  BUILD.bazel  bgp.pb.go  bgp.proto  bgp_grpc.pb.go
bootconfig/: BUILD.bazel  README.md  bootconfig.pb.go  bootconfig.proto  bootconfig_grpc.pb.go
bootz/: BUILD.bazel  bootz.pb.go  bootz.proto  bootz_grpc.pb.go
cert/: BUILD  BUILD.bazel  cert.pb.go  cert.proto  cert_grpc.pb.go
common/: BUILD  BUILD.bazel  common.pb.go  common.proto
containerz/: BUILD.bazel  README.md  containerz.pb.go  containerz.proto  containerz_grpc.pb.go
debug/: BUILD.bazel  README.md  debug.pb.go  debug.proto  debug_grpc.pb.go
diag/: BUILD  BUILD.bazel  diag.pb.go  diag.proto  diag_grpc.pb.go
docs/: README.md  best_practices.md  reserved_port.md  simplified_bootstrapping.md  simplified_security_model.md
dry_run/: BUILD.bazel  dry_run.pb.go  dry_run.proto  dry_run_grpc.pb.go
extension/: BUILD.bazel  README.md  extension.pb.go  extension.proto  extension_grpc.pb.go
factory_reset/: BUILD  BUILD.bazel  factory_reset.pb.go  factory_reset.proto  factory_reset_grpc.pb.go  reset.proto
file/: BUILD  BUILD.bazel  file.pb.go  file.proto  file_grpc.pb.go
healthz/: BUILD.bazel  README.md  healthz.pb.go  healthz.proto  healthz_grpc.pb.go  index.md
interface/: BUILD  BUILD.bazel  interface.pb.go  interface.proto  interface_grpc.pb.go
layer2/: BUILD  BUILD.bazel  layer2.pb.go  layer2.proto  layer2_grpc.pb.go
mpls/: BUILD  BUILD.bazel  mpls.pb.go  mpls.proto  mpls_grpc.pb.go
optic_firmware_install/: BUILD.bazel  optic_firmware_install.proto
optical/: optical.pb.go  optical.proto
os/: BUILD  BUILD.bazel  os.pb.go  os.proto  os_grpc.pb.go
otdr/: BUILD  BUILD.bazel  otdr.pb.go  otdr.proto  otdr_grpc.pb.go
packet_capture/: BUILD.bazel  packet_capture.pb.go  packet_capture.proto  packet_capture_grpc.pb.go
packet_link_qualification/: BUILD.bazel  index.md  packet_link_qualification.pb.go  packet_link_qualification.proto  packet_link_qualification_grpc.pb.go
qualification/: packet_link_qualification.proto
reset/: reset.proto
software_bundle/: BUILD.bazel  README.md  software_bundle.pb.go  software_bundle.proto  software_bundle_grpc.pb.go
system/: BUILD  BUILD.bazel  system.pb.go  system.proto  system_grpc.pb.go
test/: BUILD.bazel  blackbox_test.proto  simple.go  simple_test.go  test.proto  whitebox_test.proto
transceiver_firmware_install/: BUILD.bazel  transceiver_firmware_install.pb.go  transceiver_firmware_install.proto  transceiver_firmware_install_grpc.pb.go
types/: .types.proto.swp  BUILD  BUILD.bazel  types.pb.go  types.proto
wavelength_router/: BUILD  BUILD.bazel  wavelength_router.pb.go  wavelength_router.proto  wavelength_router_grpc.pb.go
