# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Supporting infrastructure for implementing and testing PINS.
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

exports_files(["LICENSE"])

# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_grpc_v2, @io_bazel_rules_go//proto:go_proto
# gazelle:proto_import_prefix github.com/openconfig/gnoi
# gazelle:prefix github.com/openconfig/gnoi
# gazelle:resolve_regexp proto github.com/openconfig/gnsi/(.*)/(.*)\.proto @com_github_openconfig_gnsi//${1}:${2}_proto
# gazelle:resolve_regexp proto go github.com/openconfig/gnsi/(.*)/(.*)\.proto @com_github_openconfig_gnsi//${1}:${2}_go_proto
# gazelle:resolve_regexp proto github.com/openconfig/bootz/(.*)/(.*)\.proto @com_github_openconfig_bootz//${1}:${2}_proto
# gazelle:resolve_regexp proto go github.com/openconfig/bootz/(.*)/(.*)\.proto @com_github_openconfig_bootz//${1}:${2}_go_proto
# gazelle:resolve proto proto google/rpc/status.proto @com_google_googleapis//google/rpc:status_proto
# gazelle:resolve proto go google/rpc/status.proto  @org_golang_google_genproto_googleapis_rpc//status
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=gnoi_go_deps.bzl%gnoi_go_deps",
        "-prune",
    ],
    command = "update-repos",
)

gazelle_test(
    name = "gazelle_test",
    workspace = "//:BUILD.bazel",
)
