module(
    name = "openconfig_gnoi",
)

bazel_dep(name = "gazelle", version = "0.41.0", repo_name = "bazel_gazelle")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a", repo_name = "com_google_googleapis")
bazel_dep(name = "grpc", version = "1.69.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.51.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "openconfig_bootz", version = "0.0.0")
bazel_dep(name = "openconfig_gnsi", version = "0.0.0")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_golang_protobuf", "org_golang_google_genproto_googleapis_rpc", "org_golang_google_grpc", "org_golang_google_grpc_cmd_protoc_gen_go_grpc", "org_golang_google_protobuf")

git_override(
    module_name = "openconfig_gnsi",
    commit = "57ecb02511c1541195a212b571ddde05bc635a0a",
    remote = "https://github.com/bstoll/gnsi",
)

git_override(
    module_name = "openconfig_bootz",
    commit = "145e9a838f6ae8ab3210848a0043e78fceda29a3",
    remote = "https://github.com/bstoll/bootz",
)

git_override(
    module_name = "openconfig_gnmi",
    commit = "66ccc5027ea9b69376978a6eeb079ba5907249b7",
    remote = "https://github.com/bstoll/gnmi",
)
