load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("//:common.bzl", "use_new_compilers")

#Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

use_new_compilers()

proto_library(
    name = "diag_proto",
    srcs = ["diag.proto"],
    deps = [
        "//types:types_proto",
    ],
)

cc_proto_library(
    name = "diag_cc_proto",
    deps = [":diag_proto"],
)

cc_grpc_library(
    name = "diag_cc_grpc_proto",
    srcs = [":diag_proto"],
    grpc_only = True,
    deps = [":diag_cc_proto"],
)

go_proto_library(
    name = "diag_go_proto",
    compilers = [
        "go_protoc_gen_go",
        "go_protoc_gen_go_grpc",
    ],
    importpath = "github.com/openconfig/gnoi/diag",
    proto = ":diag_proto",
    deps = ["//types"],
)

go_library(
    name = "diag",
    embed = [":diag_go_proto"],
    importpath = "github.com/openconfig/gnoi/diag",
)
