load("@io_bazel_rules_go//proto:go_proto_library.bzl", "go_proto_library")

proto_library(
  name = "file_proto",
  srcs = ["file.proto"],
  deps = [
    "//github.com/openconfig/reference/rpc/gnoi:go_default_library"
  ],
)

go_proto_library(
    name = "go_default_library",
    srcs = ["file.proto"],
    deps = [
      "//github.com/openconfig/reference/rpc/gnoi:go_default_library"
    ],
    visibility = ["//visibility:public"],
    rules_go_repo_only_for_internal_use = "@",
    has_services = 1,
)
