load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

#Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_proto_grpc//go:defs.bzl", "go_grpc_library", "go_proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "healthz_proto",
    srcs = ["healthz.proto"],
    deps = [
        "//common:common_proto",
        "//types:types_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "healthz_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnoi/healthz",
    protos = [":healthz_proto"],
    deps = [
        "//types:types_go_proto",
    ],
)

cc_proto_library(
    name = "healthz_cc_proto",
    deps = [":healthz_proto"],
)

cc_grpc_library(
    name = "healthz_cc_grpc_proto",
    srcs = [":healthz_proto"],
    grpc_only = True,
    deps = [":healthz_cc_proto"],
)

go_library(
    name = "healthz",
    srcs = [
        "healthz.pb.go",
        "healthz_grpc.pb.go",
    ],
    importpath = "github.com/openconfig/gnoi/healthz",
    deps = [
        "//types",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
        "@org_golang_google_protobuf//types/known/anypb:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb:go_default_library",
    ],
)
