load("@io_bazel_rules_go//proto:go_proto_library.bzl", "go_proto_library")

proto_library(
  name = "mpls_proto",
  srcs = ["mpls.proto"],
)

go_proto_library(
    name = "go_default_library",
    srcs = ["mpls.proto"],
    visibility = ["//visibility:public"],
    rules_go_repo_only_for_internal_use = "@",
    has_services = 1,
)
