load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pcap_proto",
    srcs = ["packet_capture.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pcap_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnoi/packet_capture",
    proto = ":pcap_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pcap",
    embed = [":pcap_go_proto"],
    importpath = "github.com/openconfig/gnoi/pcap",
    visibility = ["//visibility:public"],
)

go_library(
    name = "packet_capture",
    embed = [":pcap_go_proto"],
    importpath = "github.com/openconfig/gnoi/packet_capture",
    visibility = ["//visibility:public"],
)
