load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "linkqual_proto",
    srcs = ["packet_link_qualification.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//types:types_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)

go_proto_library(
    name = "linkqual_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/gnoi/packet_link_qualification",
    proto = ":linkqual_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//types",
        "@go_googleapis//google/rpc:status_go_proto",
    ],
)

go_library(
    name = "linkqual",
    embed = [":linkqual_go_proto"],
    importpath = "github.com/openconfig/gnoi/linkqual",
    visibility = ["//visibility:public"],
)

go_library(
    name = "packet_link_qualification",
    embed = [":linkqual_go_proto"],
    importpath = "github.com/openconfig/gnoi/packet_link_qualification",
    visibility = ["//visibility:public"],
)
