load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("//:common.bzl", "use_new_compilers")

# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

use_new_compilers()

proto_library(
    name = "linkqual_proto",
    srcs = ["packet_link_qualification.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//types:types_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@go_googleapis//google/rpc:status_proto",
    ],
)

go_proto_library(
    name = "linkqual_go_proto",
    compilers = [
        "go_protoc_gen_go",
        "go_protoc_gen_go_grpc",
    ],
    importpath = "github.com/openconfig/gnoi/packet_link_qualification",
    proto = ":linkqual_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//types",
        "@go_googleapis//google/rpc:status_go_proto",
    ],
)

go_library(
    name = "linkqual",
    embed = [":linkqual_go_proto"],
    importpath = "github.com/openconfig/gnoi/linkqual",
    visibility = ["//visibility:public"],
)

go_library(
    name = "packet_link_qualification",
    embed = [":linkqual_go_proto"],
    importpath = "github.com/openconfig/gnoi/packet_link_qualification",
    visibility = ["//visibility:public"],
)
