load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "test",
    srcs = ["simple.go"],
    importpath = "github.com/openconfig/gnoi/test",
    visibility = ["//visibility:public"],
)

go_test(
    name = "test_test",
    srcs = ["simple_test.go"],
    embed = [":test"],
    deps = [
        "//bgp:bgp_go_proto",
        "//common:common_go_proto",
        "//system:system_go_proto",
        "//types:types_go_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
