load("@com_google_protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//bazel:cc_grpc_library.bzl", "cc_grpc_library")

#Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "types_proto",
    srcs = ["types.proto"],
    import_prefix = "github.com/openconfig/gnoi",
    deps = ["@com_google_protobuf//:descriptor_proto"],
)

cc_proto_library(
    name = "types_cc_proto",
    deps = [":types_proto"],
)

go_proto_library(
    name = "types_go_proto",
    importpath = "github.com/openconfig/gnoi/types",
    proto = ":types_proto",
)

go_library(
    name = "types",
    embed = [":types_go_proto"],
    importpath = "github.com/openconfig/gnoi/types",
)
